<resources>
    <string name="app_name">WishlistApp</string>
    <string name="activity_edit_label_text">My wishlist</string>
    <string name="user_wishlist_status_label_text">No content</string>
    <string name="add_button_text">Add to wishlist</string>
    <string name="back_button_text">Back</string>
    <string name="app_logo_description_text">App logo</string>
    <string name="activity_main_label_text">Wishlist App</string>
    <string name="search_button_text">Search</string>
    <string name="edit_button_text">My wishlist</string>
    <string name="search_code_input_hint">Input code...</string>
    <string name="search_code_button_text">Search</string>
    <string name="search_status_label_text">Found wishlist will be below</string>
    <string name="login_label_text">Login:</string>
    <string name="login_input_hint">Input login...</string>
    <string name="password_label_text">Password:</string>
    <string name="password_input_hint">Input password...</string>
    <string name="register_button_text">Register</string>
    <string name="login_button_text">Login</string>
    <string name="close_dialog_button_text">Back</string>
    <string name="item_title_text">Item title</string>
    <string name="item_price_text">100$</string>
    <string name="item_card_link_button_text" translatable="false">link</string>
    <string name="item_card_edit_button_text" translatable="false">edit</string>
    <string name="item_card_delete_button_text" translatable="false">del</string>
    <string name="current_user_text">No user</string>
    <string name="authorization_text">Authorization</string>
    <string name="register_login_text">Registration/Login</string>
    <string name="logout_text">Logout</string>
    <string name="db_address_text">DB address</string>
    <string name="db_address_input_button_text">Confirm</string>
    <string name="db_address_input_text">Input DB address...</string>
    <string name="db_address_label_text">DB address:</string>
    <string name="share_button_text">Share</string>
    <string name="db_address_reset_button_text">Reset</string>
    <string name="create_item_label_text">Create item:</string>
    <string name="item_title_input_text">Item title...</string>
    <string name="item_price_input_text">Item price...</string>
    <string name="item_link_input_text">Item link...</string>
    <string name="create_item_input_button_text">Create</string>
    <string name="update_item_input_button_text">Save</string>
    <string name="update_item_label_text">Update item:</string>
</resources>