<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_label_text" />

    <EditText
        android:id="@+id/login_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_input_hint"
        android:inputType="text" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_label_text" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_input_hint"
        android:inputType="textPassword" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button_text" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="4dp" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_button_text" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <Button
        android:id="@+id/close_dialog_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close_dialog_button_text" />
</LinearLayout>