<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="16dp"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_item_label_text" />

    <EditText
        android:id="@+id/item_title_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item_title_input_text"
        android:inputType="text" />

    <EditText
        android:id="@+id/item_price_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item_price_input_text"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/item_link_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item_link_input_text"
        android:inputType="textUri" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <Button
        android:id="@+id/create_item_input_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_item_input_button_text" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <Button
        android:id="@+id/close_dialog_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close_dialog_button_text" />
</LinearLayout>