<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_edit_label_text"
        android:textSize="24sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <TextView
        android:id="@+id/user_wishlist_status_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/user_wishlist_status_label_text" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp">

        <LinearLayout
            android:id="@+id/wishlist_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_button_text" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_button_text" />
</LinearLayout>