<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/search_code_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/search_code_input_hint"
            android:importantForAutofill="no"
            android:inputType="text" />

        <Button
            android:id="@+id/search_code_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/search_code_button_text" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <TextView
        android:id="@+id/search_status_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_status_label_text" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp">

        <LinearLayout
            android:id="@+id/wishlist_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_button_text" />
</LinearLayout>